--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sff-mobile-navigation" aria-expanded="false">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -28,7 +28,7 @@
           <a class="navbar-brand" href="/">SFF</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="#sff-mobile-navigation">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
@@ -37,8 +37,28 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-
-    <main class="container-fluid" id="map">
+    <main class="container-fluid">
+      <!-- User form -->
+      <div class="row" id="user-form">
+        <div class="col-sm-6 col-sm-offset-4">
+          <form class="form-inline">
+            <div class="form-group">
+              <label class="sr-only" for="user-location">Location</label>
+              <input type="text" class="form-control" id="user-location" placeholder="Location">
+            </div>
+            <div class="form-group">
+              <select class="activity-picker form-control">
+                <option>Mustard</option>
+                <option>Ketchup</option>
+                <option>Relish</option>
+              </select>
+            </div>
+            <a type="submit" class="btn btn-primary">Search</a>
+          </form>
+        </div>
+      </div>
+      <!-- Google map div -->
+      <div id="map"></div>
     </main>
 
     <!-- Vendor scripts -->
@@ -50,7 +70,7 @@
     <script src="vendor/scripts/page.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-7sHOhSlgAw8EOZcLpLFK3opHvtDNb9g&v=3.exp&libraries=visualization"></script>
 
-    <!-- Custom scripts -->
+    <!-- Custom script -->
     <script src="scripts/map.js"></script>
 
     <!-- Model files: -->
