added handlebar template for filter

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
+
+    <!-- templates -->
+    <script id="sports-filter-template" type="text/x-handlebars-template">
+      <option value="{{feature_desc}}">{{feature_desc}}</option>
+    </script>
   </head>
   <body>
     <nav class="navbar navbar-default">
