--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <script src="scripts/map.js"></script>
 
     <!-- Model files: -->
-
+    <script src="scripts/model/parks-api.js"></script>
 
     <!-- View files: -->
 
