--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
 
     <main class="container-fluid">
       <!-- User form -->
-      <div class="row" id="user-form">
-        <div class="col-sm-6 col-sm-offset-4">
-          <form class="form-inline">
-            <div class="form-group">
-              <label class="sr-only" for="user-location">Location</label>
-              <input type="text" class="form-control" id="user-location" placeholder="Location">
-            </div>
-            <div class="form-group">
-              <select class="activity-picker form-control">
-                <option>Mustard</option>
-                <option>Ketchup</option>
-                <option>Relish</option>
-              </select>
-            </div>
+      <div id="user-form-container">
+        <form class="form-inline">
+          <div class="form-group" id="user-location-container">
+            <input type="text" class="form-control" id="user-location" placeholder="Location">
+          </div>
+          <div class="form-group" id="activity-picker-container">
+            <select class="form-control" id="activity-picker">
+              <option>Mustard</option>
+              <option>Ketchup</option>
+              <option>Relish</option>
+            </select>
+          </div>
+          <div class="form-group" id="user-form-submit">
             <a type="submit" class="btn btn-primary">Search</a>
-          </form>
-        </div>
+          </div>
+
+        </form>
       </div>
       <!-- Google map div -->
       <div id="map"></div>
