--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <a type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -42,10 +42,11 @@
       <div id="user-form-container">
         <form class="form-inline">
           <div class="form-group" id="user-location-container">
-            <input type="text" class="form-control" id="user-location" placeholder="Location">
+            <input type="text" class="form-control" id="user-location" placeholder="Enter you location">
           </div>
           <div class="form-group" id="activity-picker-container">
             <select class="form-control" id="activity-picker">
+              <option>Choose sport</option>
               <option>Mustard</option>
               <option>Ketchup</option>
               <option>Relish</option>
@@ -68,7 +69,7 @@
     <script src="vendor/scripts/html5sql.js"></script>
     <script src="vendor/scripts/webdb.js"></script>
     <script src="vendor/scripts/page.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-7sHOhSlgAw8EOZcLpLFK3opHvtDNb9g&v=3.exp&libraries=visualization"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-7sHOhSlgAw8EOZcLpLFK3opHvtDNb9g&v=3.exp&libraries=places"></script>
 
     <!-- Custom script -->
     <script src="scripts/map.js"></script>
