--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     <script id="sports-filter-template" type="text/x-handlebars-template">
       <option value="{{feature}}">{{feature}}</option>
     </script>
+    <script id="park-template" type="text/x-handlebars-template">
+      <h1>{{name}}</h1>
+      <p>{{feature}}</p>
+      <p>Hours:{{hours}}</p>
+      <p>Address:{{address}}</p>
+      <p>Lighting{{lighting}}</p>
+    </script>
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -60,8 +67,9 @@
 
         </form>
       </div>
+      <section id="park-info" class="tab-content"></section>
       <!-- Google map div -->
-      <div id="map"></div>
+      <div id="map" class="tab-content"></div>
     </main>
 
     <!-- Vendor scripts -->
@@ -81,6 +89,7 @@
 
     <!-- View files: -->
     <script src="scripts/views/parksView.js"></script>
+    <script src="scripts/views/parkInfoView.js"></script>
 
     <!-- Controller files: -->
     <!-- <script src="scripts/controllers/routes.js"></script> -->
