added event handler and pin functionality to project.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </select>
           </div>
           <div class="form-group" id="user-form-submit">
-            <a type="submit" class="btn btn-primary">Search</a>
+            <a type="submit" class="btn btn-primary" id="user-form-button">Search</a>
           </div>
 
         </form>
