First attempt at directions, non functional.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <p>Address: {{address}}</p>
       <p>Lighting: {{lighting}}</p>
       <a id="back-link">Back to map</a>
+      <a id="directions-link">Directions</a>
     </script>
   </head>
   <body>
