routing for park page working

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <title>Seattle Field Finder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="img/fieldfinders-logo.png">
+    <link rel="icon" type="image/x-icon" href="/img/fieldfinders-logo.png">
     <!-- Vendor css -->
-    <link rel="stylesheet" href="vendor/styles/normalize.css">
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/vendor/styles/normalize.css">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="styles/map.css">
-    <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/layout.css">
-    <link rel="stylesheet" href="styles/modules.css">
+    <link rel="stylesheet" href="/styles/map.css">
+    <link rel="stylesheet" href="/styles/base.css">
+    <link rel="stylesheet" href="/styles/layout.css">
+    <link rel="stylesheet" href="/styles/modules.css">
 
     <!-- templates -->
     <script id="sports-filter-template" type="text/x-handlebars-template">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img src="img/fieldfinders-logo.png" width="50" height="50"></a>
+          <a class="navbar-brand" href="/"><img src="/img/fieldfinders-logo.png" width="50" height="50"></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -80,27 +80,28 @@
     </main>
 
     <!-- Vendor scripts -->
-    <script src="vendor/scripts/jquery-2.2.4.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="vendor/scripts/handlebars.js"></script>
-    <script src="vendor/scripts/html5sql.js"></script>
-    <script src="vendor/scripts/webdb.js"></script>
-    <script src="vendor/scripts/page.js"></script>
+    <script src="/vendor/scripts/jquery-2.2.4.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/vendor/scripts/handlebars.js"></script>
+    <script src="/vendor/scripts/html5sql.js"></script>
+    <script src="/vendor/scripts/webdb.js"></script>
+    <script src="/vendor/scripts/page.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8cNW24nX2mt8NfGMo9k1fj34dKy0IwRg&v=3.exp&libraries=places"></script>
 
     <!-- Custom script -->
-    <script src="scripts/map.js"></script>
+    <script src="/scripts/map.js"></script>
 
     <!-- Model files: -->
-    <script src="scripts/model/parks-api.js"></script>
+    <script src="/scripts/model/parks-api.js"></script>
 
     <!-- View files: -->
-    <script src="scripts/views/parksView.js"></script>
-    <script src="scripts/views/parkInfoView.js"></script>
+    <script src="/scripts/views/parksView.js"></script>
+    <script src="/scripts/views/parkInfoView.js"></script>
 
     <!-- Controller files: -->
-    <script src="scripts/controllers/homeController.js"></script>
-    <script src="scripts/controllers/aboutController.js"></script>
-    <script src="scripts/controllers/routes.js"></script>
+    <script src="/scripts/controllers/homeController.js"></script>
+    <script src="/scripts/controllers/aboutController.js"></script>
+    <script src="/scripts/controllers/parksController.js"></script>
+    <script src="/scripts/controllers/routes.js"></script>
   </body>
 </html>
