commented out code thats currently not being used closes #29

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p>Hours: {{hours}}</p>
       <p>Address: {{address}}</p>
       <p>Lighting: {{lighting}}</p>
-      <a id="back-link">Back to map</a>
+      <a href="/">Back to map</a>
     </script>
   </head>
   <body>
