added new map div

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <p>Lighting: {{lighting}}</p>
       <a id="back-link">Back to map</a>
       <a id="directions-link">Directions</a>
+      <div id='direction-map'></div>
     </script>
   </head>
   <body>
@@ -56,6 +57,7 @@
       <!-- User form -->
       <section id="user-form-container" class="tab-content">
         <form class="form-inline">
+          <h1>Seattle Field Finder</h1>
           <div class="form-group" id="user-location-container">
             <input type="text" class="form-control" id="user-location" placeholder="Enter you location">
           </div>
@@ -69,6 +71,7 @@
           </div>
 
         </form>
+
       </section>
       <!-- Park info page -->
       <section id="park-info" class="tab-content"></section>
