--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <p>Hours: {{hours}}</p>
       <p>Address: {{address}}</p>
       <p>Lighting: {{lighting}}</p>
-      <a id="directions-link">Directions</a>
-      <div id='direction-map'></div>
       <a href="/">Back to map</a>
+      <a id="directions-link">Directions</a>
+      <div id="direction-map"></div>
     </script>
   </head>
   <body>
