Filled in the about page with starter information.  Team members will fill out the rest of their profiles.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
+          </a>
           <a class="navbar-brand" href="/"><img src="img/fieldfinders-logo.png" width="50" height="50"></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,8 +77,37 @@
       <section id="park-info" class="tab-content"></section>
       <!-- About page -->
       <section id="about-page" class="tab-content container">
-        <h2>Hello world!</h2>
+        <section id="aboutApp">
+          <h1>About the App</h1>
+            <div>Have you ever planned to play sport with friends and not known where your nearest field was? Or how about trying to find any sporting field when you move to a new city? Field Finders uses the most up to date data from the City of Seattle to connect you to your sporting field of choice.
+Up for a swim? Want to play basketball? Have you ever even heard of Pickleball? Seattle Field Finders will connect you to a huge range of different city run sporting facilities located all round the city. Start searching and get out onto the field</div>
+        </section>
+          <section id="aboutUs">
+            <h1>About the Developers</h1>
+            <section>
+              <h2>Claire Gatenby</h2>
+                <div class="claire-photo team-pic"></div>
+                  <p>Claire is a born and bred Australian who made the wild decision to quit her job and move to Seattle where she is learning how to code. She dreams of using her past life as a scientist and her new skills as a developer to move into bioinformatics. She loves cats, staying active, travelling, the outdoors and taking photos.</p>
+            </section>
+            <section>
+              <h2>Crystal Lessor</h2>
+                <div class="crystal-photo team-pic"></div>
+                  <p></p>
+            </section>
+            <section>
+              <h2>Steven Than</h2>
+                <div class="steven-photo team-pic"></div>
+                  <p></p>
+            </section>
+            <section>
+              <h2>John Gaines</h2>
+                <div class="john-photo team-pic"></div>
+                  <p></p>
+            </section>
+
+          </section>
       </section>
+
       <!-- Google map div -->
       <section id="map" class="tab-content"></section>
     </main>
