changed directions label to driving directions label

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>Address: {{address}}</p>
       <p>Lighting: {{lighting}}</p>
       <a href="/">Back to map</a>
-      <a id="directions-link">Directions</a>
+      <a id="directions-link">Get Driving Directions</a>
       <div id="direction-map"></div>
     </script>
   </head>
