--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="navbar-offcanvas navbar-offcanvas-touch navbar-offcanvas-right" id="js-bootstrap-offcanvas">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/" data-page="home">Home</a></li>
+            <li><a href="/about" data-page="about">About</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -59,13 +59,13 @@
     <main id="content" class="container-fluid">
       <!-- User form -->
       <section id="user-form-container" class="tab-content">
-        <h1>Seattle Field Finder</h1>
+        <h2>Seattle Field Finder</h2>
         <form class="form-inline" id="user-form">
           <div class="form-group" id="user-location-container">
             <input type="text" class="form-control" id="user-location" placeholder="Enter you location">
           </div>
           <div class="form-group" id="activity-picker-container">
-            <select id="sport-filter" class="activity-picker form-control">
+            <select id="sport-filter" class="form-control">
               <option>-- Select your Sport --</option>
             </select>
           </div>
