--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="icon" type="image/x-icon" href="/img/fieldfinders-logo.png">
     <!-- Vendor css -->
     <link rel="stylesheet" href="/vendor/styles/normalize.css">
+    <link rel="stylesheet" href="/vendor/styles/animate.min.css">
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.offcanvas.min.css">
 
     <!-- Custom css -->
-    <link rel="stylesheet" href="/styles/map.css">
+    <!-- <link rel="stylesheet" href="/styles/map.css"> -->
     <link rel="stylesheet" href="/styles/base.css">
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/modules.css">
@@ -21,14 +22,20 @@
       <option value="{{feature}}">{{feature}}</option>
     </script>
     <script id="park-template" type="text/x-handlebars-template">
-      <h1>{{name}}</h1>
-      <p>{{feature}}</p>
-      <p>Hours: {{hours}}</p>
-      <p>Address: {{address}}</p>
-      <p>Lighting: {{lighting}}</p>
-      <a href="/">Back to map</a>
-      <a id="directions-link">Directions</a>
-      <div id="direction-map"></div>
+      <div class="row animated slideInRight">
+        <div class="col-md-5">
+          <a href="/" class="back-btn">&larr;</a>
+          <h2>{{name}}</h2>
+          <p>{{feature}}</p>
+          <p>Hours: {{hours}}</p>
+          <p>Address: {{address}}</p>
+          <p>Lighting: {{lighting}}</p>
+          <a id="directions-link">Directions</a>
+        </div>
+        <div class="col-md-7">
+          <div id="direction-map"></div>
+        </div>
+      </div>
     </script>
   </head>
   <body>
@@ -58,7 +65,7 @@
 
     <main id="content" class="container-fluid">
       <!-- User form -->
-      <section id="user-form-container" class="tab-content">
+      <section id="user-form-container" class="tab-content animated flipInX">
         <h2>Seattle Field Finder</h2>
         <form class="form-inline" id="user-form">
           <div class="form-group" id="user-location-container">
@@ -77,7 +84,7 @@
 
       </section>
       <!-- Park info page -->
-      <section id="park-info" class="tab-content"></section>
+      <section id="park-info" class="tab-content container"></section>
       <!-- About page -->
       <section id="about-page" class="tab-content container">
         <h2>Hello world!</h2>
