minor adjustment before pr

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <option value="{{feature}}">{{feature}}</option>
     </script>
     <script id="park-template" type="text/x-handlebars-template">
-      <div class="row animated slideInRight">
+      <div class="row">
         <div class="col-md-5">
           <a href="/" class="back-btn">&larr;</a>
           <h2>{{name}}</h2>
