updates to about bio's.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Up for a swim? Want to play basketball? Have you ever even heard of Pickleball? 
             <section>
               <h2>Crystal Lessor</h2>
                 <div class="crystal-photo team-pic"></div>
-                  <p></p>
+                  <p>I'm Crystal! My cousin recommended Codefellows to me in 2015, so I took the foundations 1 course while living in Bellingham. I loved it so much, I decided to move a little closer, and continue my coding education. When I'm not coding, I enjoy reading, painting, camping, good conversation, and going on roadtrips.</p>
             </section>
             <section>
               <h2>Steven Than</h2>
@@ -102,7 +102,7 @@ Up for a swim? Want to play basketball? Have you ever even heard of Pickleball? 
             <section>
               <h2>John Gaines</h2>
                 <div class="john-photo team-pic"></div>
-                  <p></p>
+                  <p>I was born and raised in Chicago, Il.  After many years at sea I decided to make a career shift into tech which has held my interest for many years.  Through Code Fellows I am now on a path very foriegn from any path I have walked before.</p>
             </section>
 
           </section>
