--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Up for a swim? Want to play basketball? Have you ever even heard of Pickleball? 
             <section>
               <h2>Claire Gatenby</h2>
                 <div class="claire-photo team-pic"></div>
-                  <p>Claire is a born and bred Australian who made the wild decision to quit her job and move to Seattle where she is learning how to code. She dreams of using her past life as a scientist and her new skills as a developer to move into bioinformatics. She loves cats, staying active, travelling, the outdoors and taking photos.</p>
+                  <p>I am a born and bred Australian who made the wild decision to quit my job and move to Seattle where I am learning how to code. I dream of using my past life as a scientist and my new skills as a developer to move into bioinformatics. I loves cats, staying active, travelling, the outdoors and taking photos.</p>
             </section>
             <section>
               <h2>Crystal Lessor</h2>
@@ -107,7 +107,7 @@ Up for a swim? Want to play basketball? Have you ever even heard of Pickleball? 
             <section>
               <h2>Steven Than</h2>
                 <div class="steven-photo team-pic"></div>
-                  <p></p>
+                  <p>I was a former software developer for a small start-up in Tukwila, WA, and am currently a Code Fellows student at Seattle campus. I am passionate about programming and learning in general. I have developed various type of application from mobile to web to desktop applications. My plan is to go back to college for more graduate study and data science and build something revolutionary. Visit me at thanst.com or reach out via email at steven@thanst.com.</p>
             </section>
             <section>
               <h2>John Gaines</h2>
