ajax spinner added

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
       <!-- User form -->
       <section id="user-form-container" class="tab-content animated flipInX">
         <h2>Seattle Field Finder</h2>
+        <section id="ajax-spinner">
+          <h2>Retrieving park information...</h2>
+          <img src="/img/soccer-spinner.gif">
+        </section>
         <form class="form-inline" id="user-form">
           <div class="form-group" id="user-location-container">
             <input type="text" class="form-control" id="user-location" placeholder="Enter you location">
