ajax spinner working

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h2>Seattle Field Finder</h2>
         <section id="ajax-spinner">
           <h2>Retrieving park information...</h2>
-          <img src="/img/soccer-spinner.gif">
+          <img src="/img/ajax-soccer-spinner.gif">
         </section>
         <form class="form-inline" id="user-form">
           <div class="form-group" id="user-location-container">
