styling for lighting

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p>Hours: {{hours}}</p>
           <p>Address: {{address}}</p>
           <p id ="feature-count"></p>
-          <p>Lighting: {{lighting}}</p>
+          <div id="lighting">Lighting: <div class="{{lighting}}"></div></div>
           <a id="directions-link">Get Driving Directions</a>
         </div>
         <div class="col-md-7">
