ajax spinner works, font for search bar updated. img updated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/vendor/styles/animate.min.css">
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.offcanvas.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Quando|Judson" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Quando|Judson|Reem+Kufi' rel='stylesheet' type='text/css'>
 
     <!-- Custom css -->
     <!-- <link rel="stylesheet" href="/styles/map.css"> -->
@@ -70,8 +70,8 @@
       <section id="user-form-container" class="tab-content animated flipInX">
         <h2>Seattle Field Finder</h2>
         <section id="ajax-spinner">
-          <h2>Retrieving park information...</h2>
           <img src="/img/ajax-soccer-spinner.gif">
+          <h2>Retrieving park information...</h2>
         </section>
         <form class="form-inline" id="user-form">
           <div class="form-group" id="user-location-container">
