styling lighting for park info

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
           <p>Hours: {{hours}}</p>
           <p>Address: {{address}}</p>
           <p id ="feature-count"></p>
-          <div id="lighting">Lighting: <div class="{{lighting}}"></div></div>
+          <p id="lighting">Lighting: <i class="FALSE" aria-hidden="true"></i>
+</p>
           <a id="directions-link">Get Driving Directions</a>
         </div>
         <div class="col-md-7">
