--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <h2>Claire Gatenby</h2>
               </div>
               <div class="col-xs-12">
-                <p>I am a born and bred Australian who made the wild decision to quit my job and move to Seattle where I am learning how to code. I dream of using my past life as a scientist and my new skills as a developer to move into bioinformatics. I loves cats, staying active, travelling, the outdoors and taking photos.</p>
+                <p>I am a born and bred Australian who made the wild decision to quit my job and move to Seattle where I am learning how to code. I dream of using my past life as a scientist and my new skills as a developer to move into bioinformatics. I love cats, staying active, travelling, the outdoors and taking photos.</p>
               </div>
             </div>
             <div class="col-md-6 developer-bio">
