add one letter to correct a misspelling in the input field

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </section>
         <form class="form-inline" id="user-form">
           <div class="form-group" id="user-location-container">
-            <input type="text" class="form-control" id="user-location" placeholder="Enter you location">
+            <input type="text" class="form-control" id="user-location" placeholder="Enter your location">
           </div>
           <div class="form-group" id="activity-picker-container">
             <select id="sport-filter" class="form-control">
